// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckoutTodoItem > should render the component with a checkmark icon when isCompleted prop is true 1`] = `
<DocumentFragment>
  <button
    class="border border-0 p-0 bg-transparent"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square-check fa-fw"
      data-icon="square-check"
      data-prefix="fas"
      font-size="36px"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M384 32c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96C0 60.7 28.7 32 64 32l320 0zM342 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L189.1 315.2 137 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.9 7.5 18.8 7s13.4-4.1 17.5-9.8L347.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`CheckoutTodoItem > should render the component with a square icon when isCompleted prop is false 1`] = `
<DocumentFragment>
  <button
    class="border border-0 p-0 bg-transparent"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square fa-fw"
      data-icon="square"
      data-prefix="fas"
      font-size="36px"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96C0 60.7 28.7 32 64 32z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;
